--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@tiptap/pm": "^2.6.6",
     "@tiptap/react": "^2.6.6",
     "@tiptap/starter-kit": "^2.6.6",
+    "@vercel/speed-insights": "^1.2.0",
     "@visx/pattern": "^3.3.0",
     "axios": "^1.7.7",
     "axios-mock-adapter": "^2.0.0",
